--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -70,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Get build artifacts
         uses: actions/download-artifact@v3
         with:
@@ -82,7 +82,8 @@ jobs:
         run: echo "Deploying..."
   Infromation:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
+      - name: Get Custom Action Code 
+        uses: actions/checkout@v4 
       - name: Run Custom Actions   
         uses: ./.github/actions/deploy-s3
-           
