--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,3 +86,4 @@ jobs:
         with:
           bucket: jscustomaction-bucket
           dist-folder: ./dist
+          bucket-region: 'ap-south-1'
